# adtech-takehome

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
spec/: create_order_api_spec.py  create_order_spec.py  database_adapter_spec.py
src/adapters/: database_adapters.py
src/domain/: order.py
src/ports/: database_ports.py
templates/: order.html
